--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
   "presets": ["env", "react"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": [
+    ["react-hot-loader/babel"],
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": true,
+        "libraryDirectory": "lib"
+      },
+      "ant"
+    ]
+  ]
 }
