--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "autoprefixer": "^9.4.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.11.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-loader": "^3.0.0",
@@ -34,6 +36,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "antd": "^3.13.5",
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
   }
